crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3_clickbench_clickbench_q25_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q25"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.SearchPhrase                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |   Sort: to_timestamp(hits.EventTime) ASC NULLS LAST, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |     Projection: hits.SearchPhrase, hits.EventTime                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |       BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |         TableScan: hits projection=[EventTime, SearchPhrase], full_filters=[hits.SearchPhrase != LargeUtf8("")]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| physical_plan | ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |   SortPreservingMergeExec: [to_timestamp(EventTime@1) ASC NULLS LAST], fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |     SortExec: TopK(fetch=10), expr=[to_timestamp(EventTime@1) ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |       ProjectionExec: expr=[SearchPhrase@1 as SearchPhrase, EventTime@0 as EventTime]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |         BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |           ParquetExec: file_groups={24 groups: [[clickbench/hits/hits.parquet:0..615832352], [clickbench/hits/hits.parquet:615832352..1231664704], [clickbench/hits/hits.parquet:1231664704..1847497056], [clickbench/hits/hits.parquet:1847497056..2463329408], [clickbench/hits/hits.parquet:2463329408..3079161760], ...]}, projection=[EventTime, SearchPhrase], predicate=SearchPhrase@39 != , pruning_predicate=CASE WHEN SearchPhrase_null_count@2 = SearchPhrase_row_count@3 THEN false ELSE SearchPhrase_min@0 !=  OR  != SearchPhrase_max@1 END, required_guarantees=[N] |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
