crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3_clickbench_clickbench_q29_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q29"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: l DESC NULLS FIRST, fetch=25                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Projection: regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1")) AS k, avg(character_length(hits.Referer)) AS l, count(*) AS c, min(hits.Referer)                                                                                                                                                                                                                                                                                                                                                                                      |
|               |     Filter: count(*) > Int64(100000)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |       Aggregate: groupBy=[[regexp_replace(CAST(hits.Referer AS Utf8), Utf8("^https?://(?:www\.)?([^/]+)/.*$"), Utf8("\1"))]], aggr=[[avg(CAST(character_length(hits.Referer) AS Float64)), count(Int64(1)) AS count(*), min(hits.Referer)]]                                                                                                                                                                                                                                                                                                                         |
|               |         BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |           TableScan: hits projection=[Referer], full_filters=[hits.Referer != LargeUtf8("")]                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| physical_plan | SortPreservingMergeExec: [l@1 DESC], fetch=25                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |   SortExec: TopK(fetch=25), expr=[l@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |     ProjectionExec: expr=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as k, avg(character_length(hits.Referer))@1 as l, count(*)@2 as c, min(hits.Referer)@3 as min(hits.Referer)]                                                                                                                                                                                                                                                                                                                                            |
|               |       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |         FilterExec: count(*)@2 > 100000                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |           AggregateExec: mode=FinalPartitioned, gby=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(character_length(hits.Referer)), count(*), min(hits.Referer)]                                                                                                                                                                                                                                                                 |
|               |             CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |               RepartitionExec: partitioning=Hash([regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0], 24), input_partitions=24                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |                 AggregateExec: mode=Partial, gby=[regexp_replace(CAST(Referer@0 AS Utf8), ^https?://(?:www\.)?([^/]+)/.*$, \1) as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(character_length(hits.Referer)), count(*), min(hits.Referer)]                                                                                                                                                                                                                                                                         |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |                     ParquetExec: file_groups={24 groups: [[clickbench/hits/hits.parquet:0..615832352], [clickbench/hits/hits.parquet:615832352..1231664704], [clickbench/hits/hits.parquet:1231664704..1847497056], [clickbench/hits/hits.parquet:1847497056..2463329408], [clickbench/hits/hits.parquet:2463329408..3079161760], ...]}, projection=[Referer], predicate=Referer@14 != , pruning_predicate=CASE WHEN Referer_null_count@2 = Referer_row_count@3 THEN false ELSE Referer_min@0 !=  OR  != Referer_max@1 END, required_guarantees=[N] |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
